@@ -14,6 +14,7 @@ xx.xx.2008   1.00 RC-1
 - Renamed: file 'bugfixlist.txt' into 'changelog.txt'
 
 - Fixed: block settings [skenow]
+- Fixed: search function causing conflict with 'View profile'
 
 
 =========================================================
